add card-list js, connect pagination with card-list, small fixes

--- a/src/components/card-list/01-css-task/index.html
+++ b/src/components/card-list/01-css-task/index.html
@@ -13,7 +13,7 @@
   <div class="card-list-wrapper">
     <div class="container">
       <div class="row">
-        <div class="col-12 col-m-6 col-l-4">
+        <div class="col-12 col-m-6 col-l-4" data-element="body">
           <div class="product">
             <img src="../../../img/Rectangle.png" class="product__image" alt="Photo">
             <div class="product__content">
@@ -31,7 +31,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-m-6 col-l-4">
+        <div class="col-12 col-m-6 col-l-4" data-element="body">
           <div class="product">
             <img src="../../../img/Rectangle.png" class="product__image" alt="Photo">
             <div class="product__content">
@@ -49,7 +49,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-m-6 col-l-4">
+        <div class="col-12 col-m-6 col-l-4" data-element="body">
           <div class="product">
             <img src="../../../img/Rectangle.png" class="product__image" alt="Photo">
             <div class="product__content">
@@ -67,7 +67,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-m-6 col-l-4">
+        <div class="col-12 col-m-6 col-l-4" data-element="body">
           <div class="product">
             <img src="../../../img/Rectangle.png" class="product__image" alt="Photo">
             <div class="product__content">
@@ -85,7 +85,7 @@
           </div>
         </div>
 
-        <div class="col-12 col-m-6 col-l-4">
+        <div class="col-12 col-m-6 col-l-4" data-element="body">
           <div class="product">
             <img src="../../../img/Rectangle.png" class="product__image" alt="Photo">
             <div class="product__content">
