--- a/src/sass/blocks/_pagination.scss
+++ b/src/sass/blocks/_pagination.scss
@@ -1,8 +1,7 @@
 .pagination {
   display: flex;
-  justify-content: space-between;
-  margin: 50px auto 0 auto;
-  width: 590px;
+  justify-content: center;
+  margin: 20px auto 20px auto;
   height: 40px;
   &__arrow {
     position: relative;
@@ -33,6 +32,7 @@
   &__list {
     display: flex;
     justify-content: center;
+    margin: 0 15px;
     list-style: none;
   }
   &__list-item {
@@ -41,16 +41,16 @@
     align-items: center;
     font-size: 14px;
     @include circle;
-    a {
-      text-decoration: none;
-      color: #2C2C2C;
+    text-decoration: none;
+    color: #2C2C2C;
+    &:hover {
+      background: $main-color;
+      color: #fff;
     }
   }
 }
 
 .active {
   background: $main-color;
-  a {
-    color: #fff;
-  }
+  color: #fff;
 }
