--- a/src/sass/blocks/_product-card.scss
+++ b/src/sass/blocks/_product-card.scss
@@ -1,18 +1,25 @@
 .product-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   padding-top: 12px;
   width: 317px;
-  height: 394px;
+  height: 411px;
   background: #FFFFFF;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
   border-radius: 8px;
-  &__img {
-    display: block;
-    margin: 0 auto;
-    width: 293px;
+  &__img-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 0 12px;
     height: 200px;
   }
+  &__img {
+    max-width: 100%;
+    max-height: 100%;
+  }
   &__content {
-    margin-top: 22px;
     padding: 0 24px;
   }
   &__wrapper {
