added-card-list-doubleSlider-and-cartCssTask

--- a/src/components/card(done)/02-js-task/CardList.html
+++ b/src/components/card(done)/02-js-task/CardList.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=, initial-scale=1.0">
-  <link rel="stylesheet" href="stylegrid.css">
+  <link rel="stylesheet" href="style-CardList.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&display=swap">
   <title>Card-list</title>
 
