--- a/src/components/card(done)/02-js-task/index.html
+++ b/src/components/card(done)/02-js-task/index.html
@@ -3,57 +3,28 @@
 <head>
   <meta charset="utf-8">
   <title>Card component</title>
-  <link rel="stylesheet" href="./style-card.css">
+
   <link rel="stylesheet" href="./style-pagination.css">
+  <link rel="stylesheet" href="./style-CardList.css">
 </head>
 
 <body>
   <div id="root" class="wrapper1"></div>
 
   <script type="module">
-  import Card from './index-card.js';
-  import Pagination from './index-pagination.js';
+  import OnlineStorePage from './indexSome.js';
+  import {products} from './products.js';
 
-    const product = {
-      "id": "76w0hz7015kkr9kjkav",
-      "images": [
-        "https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg",
-        "https://content.rozetka.com.ua/goods/images/big_tile/163399633.jpg"
-      ],
-      "title": "Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black",
-      "rating": 2.89,
-      "price": 15999,
-      "category": "laptops",
-      "brand": "acer"
-    };
-    const monitor ={
-     id: "w73oaydowenkr9kjkav",
-      images: [
-      "https://content1.rozetka.com.ua/goods/images/big_tile/178050370.jpg"
-      ],
-      title: "Монитор 23.8 BenQ GW2475H (9H.LFELA.TBE)",
-      rating: 5,
-      price: 3800,
-      category: "monitors",
-      brand: "benq"
-    }
+    const page = new OnlineStorePage(products);
+    const root = document.querySelector('#root');
 
 
 
 
-     const card = new Card(product);
-     const pagination = new Pagination({
-       activePageIndex : 2,
-     });
+    root.append(page.element);
 
-     const someElement = document.querySelector('#root');
 
-     someElement.append(card.componentElement);
-    someElement.append(pagination.element);
 
-    pagination.setPage(7);
-
-     // root.append(card.componentElement);
   </script>
 </body>
 </html>
