--- a/src/components/card(done)/02-js-task/style-CardList.css
+++ b/src/components/card(done)/02-js-task/style-CardList.css
@@ -1,11 +1,11 @@
 *{
   box-sizing: border-box;
 }
-.main-wrapper {
+.main-wrapper-CardList {
   width: 100%;
   height: 100%;
   display: grid;
-  grid-template-columns:1fr 3fr;
+  grid-template-columns:1fr 1fr 1fr;
   grid-column-gap: 20px;
 }
 .left-side{
@@ -32,19 +32,20 @@ body{
   background-color:#FFFFFF;
   font-family: Montserrat ,sans-serif;
 }
-.wrapper{
+.CardList-wrapper{
   border-radius: 8px;
   box-shadow: 0 0 8px rgba(0,0,0,0.1);
   box-sizing: border-box;
   background-color: #FFFFFF;
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  overflow: hidden;
+  grid-template-rows: .1fr .1fr 40px;
 }
  svg{
   box-sizing: border-box;
 
 }
-.wrapper-img {
+.CardList-wrapper-img {
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: contain;
@@ -53,7 +54,7 @@ body{
     justify-content: center;
     margin: 12px 12px 0;
 }
-.wrapper-rate{
+.CardList-wrapper-rate{
   font-family: 'Montserrat';
   color:#FFFFFF;
   background-color:#7E72F2;
@@ -65,35 +66,38 @@ body{
   justify-content: space-around;
   align-items: center;
 }
-.wrapper-price{
+.CardList-wrapper-price{
   display: flex;
   justify-content: flex-end;
   padding: 5px;
   margin-right: 27.45px;
 }
-.wrapper-price-rate{
+.CardList-wrapper-price-rate{
+  margin-top: 10px;
   display: flex;
   justify-content: space-between;
 }
-.wrapper-discription{
+.CardList-wrapper-discription{
   font-size: 15.5px;
   display: flex;
   justify-content: center;
   align-items: center;
   color: #2C2C2C;
   margin-left: 24px;
-  margin-top: 18.92px;
+  margin-top: 30px;
 }
-.wrapper-laptops{
+.CardList-wrapper-laptops{
   display: flex;
-  margin-left: 24px; ;
+  margin-left: 24px;
+  margin-top: 30px;
 }
-.wrapper-add-to-card{
+.CardList-wrapper-add-to-card{
 display: flex;
 justify-content: center;
 font-family: 'Montserrat';
 color:#FFFFFF;
 background-color:#7E72F2;
+margin-top: 10px;
 padding: 10px;
 border-bottom-left-radius: 8px;
 border-bottom-right-radius: 8px;
