--- a/src/components/cart(done)/01-css-task/style.css
+++ b/src/components/cart(done)/01-css-task/style.css
@@ -3,12 +3,12 @@
 
 
 .Cart-wrapper{
-  display: flex;
   background-color:#fff;
   margin: 20px 20px 20px 20px;
   border: 1px solid #fff ;
   border-radius: 5px;
   box-shadow: 0 0 8px rgba(0,0,0,0.1);
+  width: 100%;
 
 }
 .Cart-component{
@@ -30,6 +30,7 @@
   margin: 12px 12px 12px 12px;
 }
 .Cart-product-name{
+  display: flex;
   margin-left: 40%;
   font-size: 15px;
   font-family: Montserrat,sans-serif;
@@ -37,11 +38,13 @@
 
 }
 .Cart-count{
+  display: flex;
   margin-left: 150px;
   font-family: Montserrat,sans-serif;
 }
 
 .Cart-price{
+  display: flex;
   margin-left: 100px;
   font-family: Montserrat,sans-serif;
 }
@@ -79,4 +82,6 @@ a{
   font-family: Montserrat,sans-serif;
   font-size: 12px;
 }
+
+
 
