--- a/src/components/double-slider/01-css-task/style.css
+++ b/src/components/double-slider/01-css-task/style.css
@@ -1,1 +1,50 @@
-/* put your styles in this file */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+
+body{
+  font-family: Montserrat,sans-serif;
+}
+.Double-slider-wrapper{
+
+}
+.Price-title{
+font-size: 1.2rem;
+}
+
+.range-slider{
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  position: relative;
+}
+.range-slider_inner{
+    background: #c8c2f3;
+    box-shadow: 0 0 1px #7e72f2;
+    display: inline-block;
+    height: 4px;
+
+    position: relative;
+    user-select: none;
+    width: 100%
+}
+
+.range-slider_progress{
+    background: #7e72f2;
+    bottom: 0;
+    left: 0;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 1;
+}
+
+.leftC{
+  background-size: cover;
+  cursor: grab;
+
+
+}
+.rightC{
+  background-size: cover;
+  cursor: grab;
+
+}
