renamed-files-and-deleted-superflous-files

--- a/src/components/card(done)/02-js-task/index.html
+++ b/src/components/card(done)/02-js-task/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8">
   <title>Card component</title>
-
   <link rel="stylesheet" href="./style-pagination.css">
   <link rel="stylesheet" href="./style-CardList.css">
 </head>
@@ -12,7 +11,7 @@
   <div id="root" class="wrapper1"></div>
 
   <script type="module">
-  import OnlineStorePage from './indexSome.js';
+  import OnlineStorePage from './indexMainpage.js';
   import {products} from './products.js';
 
     const page = new OnlineStorePage(products);
