Make a page-changed

--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -5,7 +5,6 @@
   <title>Card component</title>
   <link rel="stylesheet" href="../../../styles/style.min.css">
   <link rel="stylesheet" href="../../card/01-css-task/style.css">
-
   <link rel="stylesheet" href="../../pagination/01-css-task/style.css">
 
 </head>
@@ -14,32 +13,13 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import Card from './index.js';
+    import {products} from "./products.js";
+    import OnLineStorePage from "./index.js";
 
-    import Pagination from './pagination.js';
+    const page = new OnLineStorePage(products);
+    const root = document.querySelector('#root');
 
-    const product = {
-      id: "76w0hz7015kkr9kjkav",
-      images: [
-        "https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg",
-        "https://content.rozetka.com.ua/goods/images/big_tile/163399633.jpg"
-      ],
-      title: "Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black",
-      rating: 2.89,
-      price: 15999,
-      category: "laptops",
-      brand: "acer"
-    };
-
-    const card = new Card(product);
-    const pagination = new Pagination({
-      activePageIndex: 0
-    });
-
-    const someElement = document.querySelector('#root');
-
-    someElement.append(card.componentElement);
-    someElement.append(pagination.element);
+    root.append(page.element);
 
   </script>
 </body>
