--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -44,7 +44,7 @@ body {
   /* max-width: 100%; */
   /* min-height: 100%; */
   /* min-width: 400px; */
-  height: 100%;
+  height: 380px;
   width: 100%;
   box-sizing: border-box;
   background-color: var(--bg-main);
@@ -68,10 +68,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex: 1.2;
   overflow: hidden;
 }
 .img {
-  width: 100%;
+  max-height: 100%;
+  max-width: 100%;
 }
 .os-product-discription {
   color: var(--text-main-color);
@@ -82,6 +84,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   text-align: left;
+  flex: 0.8;
 }
 
 .os-rating-price-bar {
