--- a/src/components/card/02-js-task/style.css
+++ b/src/components/card/02-js-task/style.css
@@ -82,46 +82,35 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 70px;
 }
-.pagination i{
-  background-color: #ededed;
-  border-radius: 100%;
-  padding: 10px;
-  transition: 0.3s;
-}
-.pagination .arrow-left,
-.pagination .arrow-right {
-  color: #000;
-}
-.pagination .arrow-left{
+.previous{
   margin-right: 15px;
 }
-.pagination .arrow-right{
+.next{
   margin-left: 15px;
 }
-.pagination .page-list {
+.page-list {
   display: flex;
+  list-style: none;
   margin: 0;
   padding: 0;
-  list-style: none;
-  border-radius: 100%;
 }
-.pagination ul li a {
+.page-link {
+  width: 40px;
+  height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
-  height: 40px;
   background-color: #ededed;
-  border-radius: 20px;
+  border-radius: 50%;
   color: #2c2c2c;
-  transition: 0.3s;
+  transition: .3s;
   line-height: 1;
   text-decoration: none;
 }
-.pagination ul li.active a,
-.pagination ul li a:hover{
+.page-link:hover,
+.page-link.active{
   background-color: #7e72f2;
   color: #fff;
 }
@@ -134,14 +123,17 @@
 }
 .os-products-list {
   display: flex;
+  align-content: space-between;
   margin: 20px 0;
-  justify-content: space-between;
+  overflow: hidden;
 }
 .os-products-list .product{
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
   border-radius: 8px;
+  margin:5px;
 }
 .os-products-card{
+  background-color: #fff;
   margin: 5px;
   width: 317px;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
