--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -12,48 +12,48 @@
 <main>
   <div class="wrapper-pagination">
     <nav class="pagination">
-      <a href="#" class="arrow-left" data-element="nav-prev">
+      <a href="#" class="page-link previous" data-element="nav-prev">
         <i class="bi bi-chevron-left"></i>
       </a>
-    <ul class="page-list" data-element="pagination-list">
-      <li class="page-number active">
-        <a href="#" data-element="page-link" class="page-link">1</a>
+    <ul class="page-list" data-element="pagination">
+      <li>
+        <a href="#" data-element="page-link" class="page-link active" data-page-index="0">1</a>
       </li>
-      <li class="page-number">
-        <a href="#" data-element="page-link" class="page-link">2</a>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="1">2</a>
       </li>
-      <li class="page-number">
-        <a href="#" data-element="page-link" class="page-link">3</a>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="2">3</a>
       </li>
-      <li class="page-number">
-        <a href="#" data-element="page-link" class="page-link">4</a>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="3">4</a>
       </li>
-      <li class="page-number">
-        <a href="#" data-element="page-link" class="page-link">5</a>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="4">5</a>
       </li>
-      <li class="page-number">
-        <a href="#" data-element="page-link" class="page-link">6</a>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="5">6</a>
       </li>
-      <li class="page-number">
-        <a href="#" data-element="page-link" class="page-link">7</a>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="6">7</a>
       </li>
-      <li class="page-number">
-        <a href="#" data-element="page-link" class="page-link">8</a>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="7">8</a>
       </li>
-      <li class="page-number">
-        <a href="#" data-element="page-link" class="page-link">9</a>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="8">9</a>
       </li>
-      <li class="page-number">
-        <a href="#" data-element="page-link" class="page-link">10</a>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="9">10</a>
       </li>
-      <li class="page-number">
-        <a href="#" data-element="page-link" class="page-link">11</a>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="10">11</a>
       </li>
-      <li class="page-number">
-        <a href="#" data-element="page-link" class="page-link">12</a>
+      <li>
+        <a href="#" data-element="page-link" class="page-link" data-page-index="11">12</a>
       </li>
     </ul>
-    <a href="#" class="arrow-right" data-element="nav-next">
+    <a href="#" class="page-link next" data-element="nav-next">
       <i class="bi bi-chevron-right"></i>
     </a>
     </nav>
