--- a/src/components/pagination/01-css-task/style.pagination.css
+++ b/src/components/pagination/01-css-task/style.pagination.css
@@ -5,46 +5,35 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: 100px;
+  margin-top: 70px;
 }
-.pagination i{
-  background-color: #ededed;
-  border-radius: 100%;
-  padding: 10px;
-  transition: 0.3s;
-}
-.pagination .arrow-left,
-.pagination .arrow-right {
-  color: #000;
-}
-.pagination .arrow-left{
+.previous{
   margin-right: 15px;
 }
-.pagination .arrow-right{
+.next{
   margin-left: 15px;
 }
-.pagination .page-list {
+.page-list {
   display: flex;
+  list-style: none;
   margin: 0;
   padding: 0;
-  list-style: none;
-  border-radius: 100%;
 }
-.pagination ul li a {
+.page-link {
+  width: 40px;
+  height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 40px;
-  height: 40px;
   background-color: #ededed;
-  border-radius: 20px;
+  border-radius: 50%;
   color: #2c2c2c;
-  transition: 0.3s;
+  transition: .3s;
   line-height: 1;
   text-decoration: none;
 }
-.pagination ul li.active a,
-.pagination ul li a:hover{
+.page-link:hover,
+.page-link.active{
   background-color: #7e72f2;
   color: #fff;
 }
