--- a/src/components/cart/01-css-task/style.css
+++ b/src/components/cart/01-css-task/style.css
@@ -1,2 +1,67 @@
 /* put your styles in this file */
-/*@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";*/
+@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+
+ul li {
+	list-style: none;
+}
+
+.cart__wrapper {
+	max-width: 1280px;
+	margin: 0 auto;
+	align-items: center;
+}
+
+.cart__list  {
+	width: 100%;
+	padding: 0;
+}
+
+.list__item {
+	padding: 0;
+	width: 100%;
+	height: 70px;
+	background: #FFFFFF;
+	box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+	border-radius: 8px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.item__img {
+	padding-top: 5px;
+	height: 50px;
+	width: auto;
+}
+
+.item__discription {
+	font-size: 1em;
+	
+}
+
+.item__count {
+	width: 100px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.count__value {
+	width: 50%;
+}
+
+.count__item {
+	background-color: #fff;
+	border: none;
+}
+
+.count__item:hover {
+	cursor: pointer;
+}
+
+.item__price {
+	padding-right: 40px;
+}
