--- a/src/components/card/02-js-task/tren.html
+++ b/src/components/card/02-js-task/tren.html
@@ -4,51 +4,35 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Document Component tren</title>
 </head>
 <body>
-  <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>JS page tren</h1>
-    <script>
+  <button id="btn">Click me!</button>
 
-        // function sum (a=0, b=0){
-        //     return a+b;
-        // }
-        //   // задаем значени через обьект
-        // const obj={first:5, second:3};
-        // console.log(sum(obj));
-
-        function sum ({first=0, second=0}={}){
-            return first + second;
-            console.log(first);
-        };
-          // задаем значени через обьект
-      const obj={first:5, second:4};
-
-        console.log(sum(obj));
+  <script>
+    const btnElement = document.querySelector('#btn');
 
 
+    // создадим кастомное действие
+    const myEvent = new CustomEvent('foo-bar-baz', {
+      bubbles: true,
+      detail: [1, 2, 3]
+    });
 
-    </script>
+    // создаем действие клика
+    btnElement.addEventListener ('click', event =>{
+      console.log('event', event);
 
+      // отправим дейтсвие далее
+      btnElement.dispatchEvent(myEvent);
+    });
 
+    // чтобы прочитать отправленное действие dispatchEvent необходимо задать имя 'foo-bar-baz'
+    document.addEventListener('foo-bar-baz', event =>{
+      console.log('foo-bar-baz', event);
+    });
 
-
-
-
-</body>
-</html>
-
-
-
+  </script>
 
 </body>
 </html>
