--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -11,19 +11,20 @@
   <div class="wrapper">
     <section class="pagination">
       <div class="btn-prev"> <a href="#"> <i class="bi bi-chevron-left"></i></a></div>
-      <ul>
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">5</a></li>
-        <li><a href="#">6</a></li>
-        <li><a href="#">4</a></li>
-        <li><a href="#">8</a></li>
-        <li><a href="#">9</a></li>
-        <li><a href="#">10</a></li>
-        <li><a href="#">11</a></li>
-        <li><a href="#">12</a></li>
+      <ul class="pagination-list">
+        <li class="pagination-item active" ><a href="#">1</a></li>
+        <li class="pagination-item"><a href="#">2</a></li>
+        <li class="pagination-item"><a href="#">3</a></li>
+        <li class="pagination-item"><a href="#">4</a></li>
+        <li class="pagination-item"><a href="#">5</a></li>
+        <li class="pagination-item "><a href="#">6</a></li>
+        <li class="pagination-item "><a href="#">6</a></li>
+        <li class="pagination-item"><a href="#">4</a></li>
+        <li class="pagination-item"><a href="#">8</a></li>
+        <li class="pagination-item"><a href="#">9</a></li>
+        <li class="pagination-item"><a href="#">10</a></li>
+        <li class="pagination-item"><a href="#">11</a></li>
+        <li class="pagination-item"><a href="#">12</a></li>
       </ul>
       <div class="btn-next"> <a href="#"><i class="bi bi-chevron-right"></i></a> </div>
     </section>
