--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -23,50 +23,12 @@
   <div id="root" class="wrapper"></div>
 
   <script type="module">
-    import Card from './index.js';
-    import Pagination from './pagination.js';
-    //API http://online-store.bootcamp.place/api/products
-    const product = {
-      "id": "76w0hz7015kkr9kjkav",
-      "images": [
-        "https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg",
-        "https://content.rozetka.com.ua/goods/images/big_tile/163399633.jpg"
-      ],
-      "title": "Ноутбук Acer Aspire 33 A315-57G-336G (NX.HZREU.01S) Charcoal Black",
-      "rating": 2.89,
-      "price": 15999,
-      "category": "laptops",
-      "brand": "acer"
-    };
-    const monitor = {
-      "id": "2fw83q44cx4kr9kjkav",
-      "images": [
-        "https://content1.rozetka.com.ua/goods/images/big_tile/3935304.jpg"
-      ],
-      "title": "Клавиатура проводная Logitech G815 Gaming Mechanical GL Tactile RGB USB (920-008991)",
-      "rating": 3.22,
-      "price": 4500,
-      "category": "gaming_keyboards",
-      "brand": "logitech"
-    };
-    const ram = {
-      "id": "vbdh6bsx26rkr9kjkav",
-      "images": [
-        "https://content1.rozetka.com.ua/goods/images/big_tile/36439229.jpg",
-        "https://content1.rozetka.com.ua/goods/images/big_tile/36439238.jpg"
-      ],
-      "title": "RAM Kingston SODIMM DDR4-2666 8192MB PC4-21300 ValueRAM (KVR26S19S6/8)",
-      "rating": 1.81,
-      "price": 2700,
-      "category": "ram",
-      "brand": "kingston"
-    };
-    const card = new Card(monitor);
-    const pagination = new Pagination({activePageIndex:1});
-    const root = document.querySelector('#root');
-    root.append(card.componentElement);
-    root.append(pagination.element);
-    pagination.setPage(0);
+    import OnlineStorePage from './index.js';
+
+    const page = new OnlineStorePage();
+    const someElement = document.querySelector('#root');
+
+    someElement.append(page.element);
 
   </script>
 </body>
