--- a/src/components/card/02-js-task/style.css
+++ b/src/components/card/02-js-task/style.css
@@ -8,11 +8,11 @@
 
 .siz {
   background: var(--var-color-circle-bg-defolt);
-  width: 1.4rem;
-  height: 1.4rem;
+  width: 2rem;
+  height: 2rem;
   font-weight: 600;
   font-size: 0.8rem;
-  border-radius: 0.7rem;
+  border-radius: 1rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -67,4 +67,15 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+
+.os-products-list{
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 0.5rem;
+
+}
+
+.wrap{
+  width: 30%;
 }
