--- a/src/components/card/02-js-task/style.css
+++ b/src/components/card/02-js-task/style.css
@@ -79,3 +79,14 @@
 .wrap{
   width: 30%;
 }
+
+.os-products-list{
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 0.5rem;
+
+}
+
+.wrap{
+  width: 30%;
+}
