--- a/components/card/index.html
+++ b/components/card/index.html
@@ -213,7 +213,7 @@
             </svg>
           </form>        
         </div>
-        <div class="container_shop">
+        <div class="container_shop" data-element="body">
           <div class="container_shop_product">
             <div class="container_product">
               <div class="product">
