solving-merge-conflicts

--- a/src/components/card(done)/02-js-task/index.html
+++ b/src/components/card(done)/02-js-task/index.html
@@ -12,17 +12,17 @@
 
   <script type="module">
   import OnlineStorePage from './indexMainpage.js';
-  import {products} from './products.js';
+
+  const url = 'https://online-store.bootcamp.place/api/products';
+ fetch(url)
+    .then(response => response.json())
+    .then( products => {
 
     const page = new OnlineStorePage(products);
     const root = document.querySelector('#root');
 
-
-
-
     root.append(page.element);
-
-
+    });
 
   </script>
 </body>
