--- a/src/components/card(done)/02-js-task/style-CardList.css
+++ b/src/components/card(done)/02-js-task/style-CardList.css
@@ -7,16 +7,15 @@
   display: grid;
   grid-template-columns:1fr 1fr 1fr;
   grid-column-gap: 20px;
+  grid-row-gap: 20px;
 }
 .left-side{
-
   /* grid-row: 1/5;
   grid-column: 1/2; */
 }
 .right-side{
   display: grid;
-
-  gap: 20px 20px;
+  gap: 20px 20px ;
   grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
   margin: 20px 0;
   /* grid-row: 1/5;
@@ -43,7 +42,6 @@ body{
 }
  svg{
   box-sizing: border-box;
-
 }
 .CardList-wrapper-img {
     background-position: 50%;
