--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -5,6 +5,7 @@
   <title>Card component</title>
   <link rel="stylesheet" href="../01-css-task/style.css">
   <link rel="stylesheet" href="../../pagination/01-css-task/style.css">
+  <link rel="stylesheet" href="../../cards-list/01-css-task/style.css">
 </head>
 
 <body> 
@@ -13,10 +14,15 @@
   <script type="module">
     import OnlineStorePage from './index.js';
 
-    const page = new OnlineStorePage();
-    const someElement = document.querySelector('#root');
+    fetch('https://online-store.bootcamp.place/api/products?_page=1&_limit=9')
+      .then(response => response.json())
+      .then(products => {
+        const page = new OnlineStorePage(products);
+        const root = document.querySelector('#root');
 
-    someElement.append(page.element);
+        root.append(page.element);
+    })
+
   </script>
 </body>
 </html>
