--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <main>
-  <div class="wrapper-1">
+  <div class="product-list">
     <div class="card-container col-m col-s">
       <div class="card">
         <div class="item" style="background-image: url(https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg)"></div>
