--- a/src/components/cards-list/01-css-task/style.css
+++ b/src/components/cards-list/01-css-task/style.css
@@ -1,6 +1,6 @@
-.wrapper-1 {
+.product-list {
     max-width: 990px;
-    margin: 100px auto;
+    margin: 0 auto;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
