--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -17,6 +17,7 @@
 <main>
   <div class="wrapper">
     <!-- SearchBox component -->
+    <div class="search-box"><i class="bi bi-search"></i></div>
   </div>
 </main>
 </body>
