--- a/src/components/search-box/01-css-task/style.css
+++ b/src/components/search-box/01-css-task/style.css
@@ -1,3 +1,11 @@
 @import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
 
 /* put your styles in this file */
+.search-box {
+width: 990px;
+height: 45px;
+box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+background: #FFFFFF;
+display:flex;
+align-items:center;
+}
