DONE component searcing-box

--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -5,18 +5,14 @@
   <title>SearchBox component</title>
 
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
     <!-- SearchBox component -->
+    <div class="search-box">
+      <i class="bi bi-search"></i>
+    </div>
   </div>
 </main>
 </body>
