--- a/src/components/card/01-css-task/style.css
+++ b/src/components/card/01-css-task/style.css
@@ -10,13 +10,17 @@
 a,p{
   color:var(--text-color);
 }
+.product-list{
+  display: flex;
+  flex-wrap: wrap;
+}
 .card-shop{
   position: relative;
   height: 394px;
   width: 317px;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.133);
-  margin: 10rem auto;
+  margin: 1rem auto;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -29,9 +33,17 @@ a,p{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
 }
 .card-shop-img{
   margin-top: 1rem;
+  width:  12rem;
+  box-sizing: border-box;
+
+}
+.card-shop-img>img{
+  margin-top: 1rem;
+  max-width:  12rem;
 }
 .card-shop-price-and-mark{
   display: flex;
@@ -39,6 +51,7 @@ a,p{
   justify-content: space-between;
   margin: 1rem  1rem;
   align-items: center;
+  width: 90%;
 
 }
 
@@ -89,7 +102,7 @@ a,p{
   align-items: center;
   justify-content: center;
 }
-.pagination-element{
+.pagination-element, .pagination-element-arrow{
   display: flex;
   font-size: 10px;
   border-radius: 50%;
@@ -104,7 +117,7 @@ a,p{
   margin:1rem;
 }
 
-.pagination-element:hover, .pagination>.active{
+.pagination-element:hover, .pagination>.active, .pagination-element-arrow:hover{
   background: var(--main-color);
   color: var(--white-color);
 }
