--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -9,43 +9,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<body class="test">
-  <div id="root" class="wrapper"></div>
+<body class="test" style="display: flex; flex-direction: column; flex-wrap: wrap">
+<div id="root" class="wrapper"></div>
 
-  <script type="module">
+<script type="module">
+  //import {products} from "./products.js";
+  import OnlineStorePage from './index.js'
 
-    import Card   from "./index.js";
-    import Pagination from "./pagination.js";
-    const product = {
-      "id": "76w0hz7015kkr9kjkav",
-      "images": [
-        "https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg",
-        "https://content.rozetka.com.ua/goods/images/big_tile/163399633.jpg"
-      ],
-      "title": "Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black",
-      "rating": 2.89,
-      "price": 15999,
-      "category": "laptops",
-      "brand": "acer"
-    };
-    const monitor = {
-      id: "w73oaydowenkr9kjkav",
-      images: [
-        "https://content1.rozetka.com.ua/goods/images/big_tile/178050370.jpg"
-      ],
-      title: "Монитор 23.8 BenQ GW2475H (9H.LFELA.TBE)",
-      rating: 5,
-      price: 3800,
-      category: "monitors",
-      brand: "benq"
-    };
+  // fetch('https://online-store.bootcamp.place/api/products')
+  // .then(response=>response.json())
+  // .then(products => {
+     const page=new OnlineStorePage();
+  const someElement = document.querySelector('.test');
+     someElement.append(page.element);
+  // })
 
-    const card = new Card(product);
-  const myElement=document.querySelector('.test')
-    myElement.append(card.componentElement);
-    const pagination = new Pagination();
-    const newPagination=document.querySelector('.test')
-    newPagination.append(pagination.element);
-  </script>
+
+
+
+</script>
 </body>
 </html>
