add fetch, fix card component

--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -18,7 +18,9 @@
   <div class="wrapper">
     <!-- Card component -->
     <div class="product">
-      <img src="../../../img/Rectangle.png" class="product__image" alt="Photo">
+      <div class="product__image-wrapper">
+        <img src="../../../img/Rectangle.png" class="product__image" alt="Photo">
+      </div>
       <div class="product__content">
         <div class="product__block-rating-and-price">
           <div class="product__rating">
