--- a/src/components/card/01-css-task/css/style.css
+++ b/src/components/card/01-css-task/css/style.css
@@ -4,24 +4,31 @@
 }
 
 .product {
-  margin: 0 auto;
-  max-width: 315px;
-  height: 394px;
-  position: relative;
+  width: 317px;
+  height: 411px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   padding-top: 12px;
   box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
   border-radius: 8px;
 }
 
+.product__image-wrapper {
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 12px;
+}
+
 .product__image {
-  display: block;
-  margin: 0 auto;
-  max-width: 280px;
-  max-height: 200px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .product__content {
-  padding: 22px 24px;
+  padding: 0 24px;
 }
 
 .product__block-rating-and-price {
@@ -61,10 +68,9 @@
 }
 
 .product__button {
+  display: block;
   padding: 15px 115px;
   text-align: center;
-  position: absolute;
-  bottom: 0;
   font-size: 12px;
   background: #7E72F2;
   color: #FFFFFF;
