done hw filter-list

--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -4,18 +4,41 @@
   <meta charset="UTF-8" />
   <title>FiltersList component</title>
   <link rel="stylesheet" href="style.css">
-
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <!-- FiltersList component -->
+    <div class="filter-list">
+     <div class="filter-list-component">
+
+        <h2 class="name-filter-list-category">Category</h2>
+
+        <ul class="filter-list-category">
+          <li class="category"> <i class="bi bi-square"></i>Monitors</li>
+          <li class="category"> <i class="bi bi-square"></i>Laptops</li>
+          <li class="category"> <i class="bi bi-square"></i>Video cards</li>
+          <li class="category"> <i class="bi bi-square"></i>Gaming keybords</li>
+          <li class="category"> <i class="bi bi-square"></i>Computer maus</li>
+        </ul>
+      </div>
+
+      <div class="dicorative-block-component"></div>
+
+      <div class="filter-list-component">
+
+        <h2 class="name-filter-list-category">Brand</h2>
+
+        <ul class="filter-list-category">
+          <li class="category"> <i class="bi bi-square"></i>Asus</li>
+          <li class="category"> <i class="bi bi-square"></i>Acer</li>
+          <li class="category"> <i class="bi bi-square"></i>Apple</li>
+          <li class="category"> <i class="bi bi-square"></i>Dell</li>
+          <li class="category"> <i class="bi bi-square"></i>Dynamode</li>
+        </ul>
+      </div>
+
+     </div>
+
   </div>
 </main>
 </body>
