--- a/src/components/filters-list/01-css-task/style.css
+++ b/src/components/filters-list/01-css-task/style.css
@@ -1,1 +1,64 @@
 /* put your styles in this file */
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+body {
+  height: 100%;
+  margin: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  all: unset;
+}
+
+.wrapper {
+  width: 400px;
+  margin: 100px auto;
+  font-family: Montserrat;
+}
+
+.filter-list {
+  background: #FFFFFF;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.15);
+  border-radius: 10px;
+}
+
+.filter-list-component {
+  padding: 2rem;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
+
+.name-filter-list-category {
+  list-style: none;
+}
+
+.filter-list-category {
+  padding: 0;
+  margin: 0;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  list-style: none;
+}
+
+.category {
+  padding-top: 0.5rem;
+}
+
+.bi-square {
+  padding-right: 0.5rem;
+}
+
+.dicorative-block-component {
+  margin-left: 2rem;
+  margin-right: 2rem;
+  height: 1px;
+  background: #D6D6D6;
+}
