--- a/src/components/card/02-js-task/index.html
+++ b/src/components/card/02-js-task/index.html
@@ -16,8 +16,10 @@
   <style>
     .wrapper {
       /* для отображения карточки по центру */
-      width: 400px;
+      /* margin: верх право низ лево; */
+      width: 830px;
       margin: 100px auto;
+      outline: 1px solid;
     }
   </style>
 </head>
